# tiles-to-mesh-plugin

./: .gitignore  Cargo.toml  colab_install.py  pyproject.toml  setup.py
examples/: quickstart.ipynb
python/tiles_to_mesh/: __init__.py  _colab.py  _rust.pyi  cleanup.py  export.py  fetcher.py  mesh.py  selector.py  viewer.py
src/: lib.rs
src/geo/: coords.rs  mod.rs
src/mesh/: clip.rs  merge.rs  mod.rs  transform.rs
src/tiles/: fetcher.rs  mod.rs  parser.rs  traversal.rs
tests/: test_export.py  test_fetcher.py  test_mesh.py  test_selector.py
