[package]
name = "tiles_to_mesh"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust core for tiles-to-mesh: 3D tile fetching, GLB parsing, mesh processing"

[lib]
name = "_tiles_to_mesh_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
gltf = { version = "1.4", features = ["extras", "names"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nalgebra = "0.33"
geo = "0.28"
geo-types = "0.7"
thiserror = "2"
tracing = "0.1"
byteorder = "1"
base64 = "0.22"
url = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
